--- a/config/storage.yml
+++ b/config/storage.yml
@@ -32,3 +32,8 @@ local:
 #   service: Mirror
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
+cloudinary:
+  service: Cloudinary
+  cloud_name: ashlii
+  api_key: 773789823222688
+  api_secret: AUA0xAVwALk3VsK1sPIxktqp4DA
