--- a/config/storage.yml
+++ b/config/storage.yml
@@ -38,8 +38,8 @@ cloudinary:
   api_key: 773789823222688
   api_secret: AUA0xAVwALk3VsK1sPIxktqp4DA
 
-cloudinary:
-  service: Cloudinary
-  cloud_name: ['CLOUDINARY_CLOUDNAME']
-  api_key: ['CLOUDINARY_APIKEY']
-  api_secret: ['CLOUDINARY_SECRET']
+# cloudinary:
+#   service: Cloudinary
+#   cloud_name: ['CLOUDINARY_CLOUDNAME']
+#   api_key: ['CLOUDINARY_APIKEY']
+#   api_secret: ['CLOUDINARY_SECRET']
