--- a/config/storage.yml
+++ b/config/storage.yml
@@ -33,11 +33,15 @@ local:
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
 
+# cloudinary:
+#   service: Cloudinary
+#   cloud_name: ['CLOUDINARY_CLOUDNAME']
+#   api_key: ['CLOUDINARY_APIKEY']
+#   api_secret: ['CLOUDINARY_SECRET']
+
+
 cloudinary:
   service: Cloudinary
-  cloud_name: ['CLOUDINARY_CLOUDNAME']
-  api_key: ['CLOUDINARY_APIKEY']
-  api_secret: ['CLOUDINARY_SECRET']
-
-
-
+  cloud_name: ashlii
+  api_key: 773789823222688
+  api_secret: AUA0xAVwALk3VsK1sPIxktqp4DA
